--- a/index.html
+++ b/index.html
@@ -382,11 +382,11 @@
     <article>
     <h2>Mijn keuze voor deze opleiding</h2>
     <h3>Waarom heb ik voor de opleiding programmeren gekozen?</h3>
-    <p>Ik heb deze opleiding gekozen omdat ik al van jongs af aan een grote interesse rondom technologie heb bijvoorbeeld: Gamen, computers en hoe die nu in elkaar steken en het samenstellen van toetsenborden. Na een aantal verschillende richtingen in het middelbaar te hebben gedaan rondom meer sociale beroepen vond ik dat het tijd was om dan toch eens ites rond IT uit te proberen. Ik heb dan ooit eens een kleine cursus gekregen van een vriend die over Python ging. Na het uitproberen van programmeren met Python was ik gelijk verkocht en wist ik zeker dat ik hier later iets mee wou gaan doen!</p>
+    <p>Ik heb deze opleiding gekozen omdat ik al van jongs af aan een grote interesse rondom technologie heb bijvoorbeeld: Gamen, computers en hoe die nu in elkaar steken en het samenstellen van toetsenborden. Na een aantal verschillende richtingen in het middelbaar te hebben gedaan rondom meer sociale beroepen vond ik dat het tijd was om dan toch eens iets rond IT uit te proberen. Ik heb dan ooit eens een kleine cursus gekregen van een vriend die over Python ging. Na het uitproberen van programmeren met Python was ik gelijk verkocht en wist ik zeker dat ik hier later iets mee wou gaan doen!</p>
     </article>
     <article>
         <h3>Waarom past dit beroep bij mij?</h3>
-        <p>Dit beroep past bij mij omdat eerst en vooral programmeren een interesse is van mij en ik werk graag samen met andere mensen om een bepaald doel te bereiken. Daarnaast wil ik ook iets willen betekenen voor andere, ik help graag waar ik kan helpen en ik denk dat via programmeren  het een mooie manier is om bepaalde problemen die bedrijven ervaren op te lossen zodat zij op een efficiëntere manier kunnen verder werken. Ik zou ook liever vanuit een kantoor / thuis willen werken waar ik rustig op mijn eigen plek kan gaan werken zonder al teveel prikkels. </p>
+        <p>Dit beroep past bij mij omdat eerst en vooral programmeren een interesse is van mij en ik werk graag samen met andere mensen om een bepaald doel te bereiken. Daarnaast wil ik ook iets willen betekenen voor andere, ik help graag waar ik kan helpen en ik denk dat programmeren een mooie manier is om bepaalde problemen die bedrijven ervaren op te lossen zodat zij op een efficiëntere manier kunnen verder werken. Ik zou ook liever vanuit een kantoor / thuis willen werken waar ik rustig op mijn eigen plek kan gaan werken zonder al teveel prikkels. </p>
     </article>
     <h2>De 5 rollen van een programmeur</h2>
     <table class="tableblock frame-all grid-all stretch">
@@ -533,21 +533,21 @@
         <h4>Wat lukt mij al goed?</h4>
         <p>Debuggen voor een groot deel.</p>
         <h4>Wat lukt mij nog niet zo goed?</h4>
-        <p>Heb veel moeite met projecten opstarten, het kritisch nadenken over hoe ik bepaalde dingen moet programmeren lukt niet zo goed en vraagt nog veel oefening.</p>
+        <p>Heb veel moeite met projecten opstarten, het kritisch nadenken over hoe ik bepaalde dingen moet programmeren lukt niet zo goed en vraagt nog veel oefening. Waar ik mij voor zal blijven inzetten.</p>
     </article>
     <article>
         <h3>Tester:</h3>
         <h4>Hoe ver sta ik?</h4>
-        <p>Heb nog geen ervaring in software testing.</p>
+        <p>Heb nog niet veel ervaring in software testing.</p>
         <h4>Wat lukt mij al goed?</h4>
-        <p>/</p>
+        <p>Ik kan tussen het programmeren van een applicatie door momenten inplannen om mijn applicatie te testen om te kijken wat ik nog moet doen / kijken of het op dat moment al werkt zoals het zou moeten. </p>
         <h4>Wat lukt mij nog niet zo goed?</h4>
         <p>/</p>
     </article>
     <article>
         <h3>Communicator / Teamspeler</h3>
         <h4>Hoe ver sta ik?</h4>
-        <p>Zeer goed: in team werken is 1 van mijn sterktes en doe het ook graag.</p>
+        <p>Zeer goed: in team werken is 1 van mijn sterkte's en doe het ook graag. Communicatie is ookeen sterkte van mij en heb daar ook weinig moeite mee om problemen in groepsverband aan te kaarten. </p>
         <h4>Wat lukt mij al goed?</h4>
         <p>Het luisteren naar andere teamleden voor input, het samenwerken aan hetzelfde doel, het geven van feedback, een eigen mening durven formuleren en delen.</p>
         <h4>Wat lukt mij nog niet zo goed?</h4>
@@ -578,25 +578,26 @@
         <p>Tijdens deze PE's moesten wij bepaalde softwareapplicatie's creëren via C#. bijvoorbeeld: een slotmachina, een game,...</p>
         <p>2: Het leren debuggen van onze softwareapplicatie.</p>
         <p>We hebben geleerd hoe we moeten debuggen bij een applicatie om bepaalde bugs op te lossen. Daar is ook een PE over geweest.</p>
-        <p>3: </p>
-        <p></p>
+        <p>3: complexe applicatie's op de werkvloer </p>
+        <p>Later op de werkvloer zal ik aan grotere en complexere applicatie's moeten werken, ik zal op dat moment niet alles begrijpen en zal met de tijd mee steeds meer moeten bijleren over het programmeren.</p>
     </article>
     <article>
         <h3>Tester</h3>
         <p>1: Het testen van geschreven code van een ander persoon.</p>
-        <p>Later zullen ik waarschijnlijk ook code moeten testen van andere mensen om feedback te kunnen geven over bepaalde bugs die ik heb gevonden. </p>
-        <p>2: Het testen van eigenn code om te zien of hij juiste werkt.</p>
+        <p>Later zal ik waarschijnlijk ook code moeten testen van andere mensen om feedback te kunnen geven over bepaalde bugs die ik heb gevonden. </p>
+        <p>2: Het testen van eigen code om te zien of hij juiste werkt.</p>
         <p>Naast het testen van andere hun code's zal ik ook die van mezelf moeten testen. Kijken of die goed werkt en dat geen bugs zijn etc.</p>
-        <p>3:</p>
+        <p>3: Het leren van de juiste testen uitvoeren voor het  vinden van bugs.</p>
+        <p>Ik ga bepaalde basistest moeten leren uitvoeren tijdens mijn opleiding maar ook tijdens mijn job later ik ga de meest efficiënte tests moeten leren zodat ik het grootste deel van mogelijke bugs kan vermijden.</p>
     </article>
     <article>
         <h3>Communicator / Teamspeler</h3>
         <p>1: Het werken aan een groepspresentatie</p>
-        <p>Voor Communication Skills hebben wij als een groep van 3 personen een presentatie moeten voorbereiden over een IT gericht onderwerp. daarbij was communicatie heel belangrijk bij de voorbereiding zodat iedereen duidelijk wist wie over welk deel van de presentatie moest praten.</p>
+        <p>Voor Communication Skills hebben wij als een groep van 3 personen een presentatie moeten voorbereiden over een IT gericht onderwerp. Daarbij was communicatie heel belangrijk bij de voorbereiding zodat iedereen duidelijk wist wie over welk deel van de presentatie moest praten.</p>
         <p>2: Groepsprojecten school</p>
         <p>In de toekomst bijvoorbeeld bij werkplekleren 2 zal het belangrijk zijn om goed samen te werken als team als we een project moeten maken. Communicatei speelt dan ook een grote rol voor bijvoorbeeld feedback te geven aan je teamgenoten of problemen durft aan te kaarten bij ergernissen.</p>
         <p>3: Werkvloer</p>
-        <p>Later als ik een een job in de It heb zal ik altijd moeten samenwerken met collega's om projecten af te werken;</p>
+        <p>Later als ik een job in de IT heb zal ik moeten samenwerken met collega's om aan projecten te werken en om de groepsdynamiek te versterken zodat het steeds vlotter verloopt.</p>
     </article>
     <article>
         <h3>Levenslang lerende IT-professional</h3>
@@ -605,7 +606,7 @@
         <p>2: informatieve filmpje's bekijken</p>
         <p>Thuis kijk ik wel eens wat YouTube filmpje's over It gerichte onderwerpen waar ik moeite mee ervaar of wat mij interessant lijkt. zodat ik meer kennis op doe voor later.</p>
         <p>3: vragen stellen aan mensen met meer kennis</p>
-        <p>Later zal ik altijd problemen ervaren bij projecten waar ik weinig ervaring bij heb. Ik zal dus veel vragen moeten stellen aan collega's die meer kennis hebben over dat onderwerp om zelf meer kennis op te doen.</p>
+        <p>Later zal ik tegen problemen aanlopen bij projecten waar ik weinig ervaring bij heb. Ik zal dus veel vragen moeten stellen aan collega's die meer kennis hebben over dat onderwerp om zelf meer kennis op te doen.</p>
     </article>
     <h2>Opdrachten</h2>
     <table>
@@ -797,14 +798,16 @@
         </tr>
         </tbody>
     </table>
-    <p><strong>talenten/kwaliteiten bezit ik vandaag en heb ik kunnen toepassen tijdens Werkplekleren?</strong></p>
-    <p>Ik heb dit semester beter leren plannen, het heeft me geholpen een betere routine te behouden en het aanzetten tot mij achter mijn cursus te zetten is daardoor ook makkelijker geworden.</p>
-    <p><strong> zit het met mijn valkuilen? Wat gaat nog niet zo goed en waarom?</strong></p>
-    <p>Soms betrap ik mijzelf nogsteeds op het uitstellen van taken/leren. bijvoorbeeld bij het maken van mijn cv heb ik wat langer gewacht waardoor het wat krapper werd met tijd om hem af te krijgen en ook nog eens een mooi resultaat af te leveren.</p>
-    <p><strong>Wat zijn verbeterpunten of uitdagingen voor mezelf? En wat kan ik daaraan doen?</strong></p>
-    <p>Een uitdaging zal zeker zijn om mij te houden aan mijn planningen en om zo min mogelijk schoolwerk uit te stellen. Maar ik geloof in mezelf dat ik het schooljaar tot een goed einde zal kunnen brengen. </p>
-    <p><strong> wil ik nog meer bijleren tijdens de volgende periode van WPL?</strong></p>
-    <p>Vooral beter en efficiënter leren programmeren. Maar ook nieuwe mensen leren kennen waarmee ik kan samenwerken, een betere kijk op hoe het op de werkvloer zal gaan waardoor ik een betere kijk oo de toekomst kan hebben over wat ik allemaal kan verwachten. </p>
+    <article>
+        <p><strong>talenten/kwaliteiten bezit ik vandaag en heb ik kunnen toepassen tijdens Werkplekleren?</strong></p>
+        <p>Ik heb dit semester beter leren plannen, het heeft me geholpen een betere routine te behouden en het aanzetten tot mij achter mijn cursus te zetten is daardoor ook makkelijker geworden.</p>
+        <p><strong> zit het met mijn valkuilen? Wat gaat nog niet zo goed en waarom?</strong></p>
+        <p>Soms betrap ik mijzelf nogsteeds op het uitstellen van taken/leren. bijvoorbeeld bij het maken van mijn cv heb ik wat langer gewacht waardoor het wat krapper werd met tijd om hem af te krijgen en ook nog eens een mooi resultaat af te leveren.</p>
+        <p><strong>Wat zijn verbeterpunten of uitdagingen voor mezelf? En wat kan ik daaraan doen?</strong></p>
+        <p>Een uitdaging zal zeker zijn om mij te houden aan mijn planningen en om zo min mogelijk schoolwerk uit te stellen. Maar ik geloof in mezelf dat ik het schooljaar tot een goed einde zal kunnen brengen. </p>
+        <p><strong> wil ik nog meer bijleren tijdens de volgende periode van WPL?</strong></p>
+        <p>Vooral beter en efficiënter leren programmeren. Maar ook nieuwe mensen leren kennen waarmee ik kan samenwerken, een betere kijk op hoe het op de werkvloer zal gaan waardoor ik een betere kijk oo de toekomst kan hebben over wat ik allemaal kan verwachten. </p>
+    </article>
     <table id="kern">
         <tbody>
         <tr>
@@ -817,14 +820,34 @@
         </tr>
         </tbody>
     </table>
-    <p><strong>Welke talenten/kwaliteiten bezit ik vandaag en heb ik kunnen toepassen tijdens Werkplekleren?</strong></p>
-    <p>Tijdens dit semester heb ik beter leren zelfstandig werken bijvoorbeeld aan mijn cv, portfolio, scratch projec, etc. Ook het eigen onderhouden van geziene leerstof en het actief leren voor PE's was ook een grote factor dat heeft geholpen met het zelfstandig worden.</p>
-    <p><strong> zit het met mijn valkuilen? Wat gaat nog niet zo goed en waarom?</strong></p>
-    <p>Door alles zelfstandig te willen doen heb ik aan bepaalde projecten meer tijd moeten besteden omdat ik vastliep en liever zelf een oplossing vond. terwijl ik ook eigenlijk het internet kon inschakelen om bijvoorbeeld meer inspiratie op te doen hoe ik beter mijn probleem had kunnen aanpakken. </p>
-    <p><strong>Wat zijn verbeterpunten of uitdagingen voor mezelf? En wat kan ik daaraan doen?</strong></p>
-    <p>De belangrijkste is toch wel om meer hulp te durven vragen bij dingen waar ik problemen ervaar.  Daarnaast heb ik soms nog moeite bij het opstarten van projecten waardoor ik soms kostbare tijd laat voorbij gaan aangezien ik zelf in handen heb wanneer ik daadwerkelijk begin aan mijn studies/projecten.</p>
-    <p><strong>Wat wil ik nog meer bijleren tijdens de volgende periode van WPL?</strong></p>
-    <p>betere tijdsverdeling en beter durven aangeven als ik ergens moeite mee heb.</p>
+    <article>
+        <p><strong>Welke talenten/kwaliteiten bezit ik vandaag en heb ik kunnen toepassen tijdens Werkplekleren?</strong></p>
+        <p>Tijdens dit semester heb ik beter leren zelfstandig werken bijvoorbeeld aan mijn cv, portfolio, scratch projec, etc. Ook het eigen onderhouden van geziene leerstof en het actief leren voor PE's was ook een grote factor dat heeft geholpen met het zelfstandig worden.</p>
+        <p><strong> zit het met mijn valkuilen? Wat gaat nog niet zo goed en waarom?</strong></p>
+        <p>Door alles zelfstandig te willen doen heb ik aan bepaalde projecten meer tijd moeten besteden omdat ik vastliep en liever zelf een oplossing vond. terwijl ik ook eigenlijk het internet kon inschakelen om bijvoorbeeld meer inspiratie op te doen hoe ik beter mijn probleem had kunnen aanpakken. </p>
+        <p><strong>Wat zijn verbeterpunten of uitdagingen voor mezelf? En wat kan ik daaraan doen?</strong></p>
+        <p>De belangrijkste is toch wel om meer hulp te durven vragen bij dingen waar ik problemen ervaar.  Daarnaast heb ik soms nog moeite bij het opstarten van projecten waardoor ik soms kostbare tijd laat voorbij gaan aangezien ik zelf in handen heb wanneer ik daadwerkelijk begin aan mijn studies/projecten.</p>
+        <p><strong>Wat wil ik nog meer bijleren tijdens de volgende periode van WPL?</strong></p>
+        <p>betere tijdsverdeling en beter durven aangeven als ik ergens moeite mee heb.</p>
+    </article>
+    <h2>X Factor</h2>
+    <img src="images/x-factor_2022.jpg" id="XF">
+    <article>
+        <h3>(EM)PASSIE</h3>
+        <p>Tijdens de opleiding heb ik een (tot nu toe) kleine passie opgewekt voor programmeren bijvoorbeeld door het maken van het scratch project. Ik vond het heel fijn om dit project uit te werkent en daardoor kwam dan ook de passie om steeds meer te willen maken .</p>
+    </article>
+    <article>
+        <h3>ONDERNEMEND & INNOVATIEF</h3>
+        <p>Door zoveel tijd te spenderen in het leren programmeren, het bekijken van andermans code en het horen vertellen van lectoren over hun passie voor programmeren en de IT wereld in het algemeen werd het makkelijker ook om mij steeds achter mijn laptop te zetten en bij te leren. Het bracht nieuwsgierigheid met zich mee die zich omzette naar steeds meer te weten willen komen over het programmeren en de IT wereld.</p>
+    </article>
+    <article>
+        <H3>(INTERNATIONAAL) SAMEN(NET)WERKEN</H3>
+        <p>Door deze opleiding heb ik veel nieuwe contacten leren leggen met mensen, mensen met ook een (kleine) passie voor programmeren en zich daar dan ook graag mee bezig houden. Het heeft mij nieuwe inzichten gegeven niet alleen over code schrijven maar ook heeft het een beter beeld gegeven over mijn plannen in de toekomst en wat ik allemaal wil bereiken na deze opleiding.</p>
+    </article>
+    <article>
+        <h3>MULTI- & DISCIPLINARITEIT</h3>
+        <p>Door het semester heen heb ik mij altijd zo goed mogelijk proberen in te zetten voor mijn opleiding. Ik heb heel hard kunnen werk aan mij hard- & soft skills en ik kan met zekerheid zeggen dat ik er een aantal bij heb. Okal weet ik dat er nog veel werk aan de winkel is zeker bij de Hard skills blijf ik positief naar mijn opleiding kijken en ik ben zeker dat ik deze ook tot een goed einde zal brengen.</p>
+    </article>
 
 </main>
 </body>
