--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
     <img src="images/x-factor_2022.jpg" id="XF">
     <article>
         <h3>(EM)PASSIE</h3>
-        <p>Tijdens de opleiding heb ik een (tot nu toe) kleine passie opgewekt voor programmeren bijvoorbeeld door het maken van het scratch project. Ik vond het heel fijn om dit project uit te werkent en daardoor kwam dan ook de passie om steeds meer te willen maken .</p>
+        <p>Tijdens de opleiding heb ik een (tot nu toe) kleine passie opgewekt voor programmeren bijvoorbeeld door het maken van het scratch project. Ik vond het heel fijn om dit project uit te werken en daardoor kwam dan ook de passie om steeds meer te willen maken. Ik zal ook blijven mijn best doen voor deze passie steeds groter te maken.</p>
     </article>
     <article>
         <h3>ONDERNEMEND & INNOVATIEF</h3>
@@ -846,7 +846,7 @@
     </article>
     <article>
         <h3>MULTI- & DISCIPLINARITEIT</h3>
-        <p>Door het semester heen heb ik mij altijd zo goed mogelijk proberen in te zetten voor mijn opleiding. Ik heb heel hard kunnen werk aan mij hard- & soft skills en ik kan met zekerheid zeggen dat ik er een aantal bij heb. Okal weet ik dat er nog veel werk aan de winkel is zeker bij de Hard skills blijf ik positief naar mijn opleiding kijken en ik ben zeker dat ik deze ook tot een goed einde zal brengen.</p>
+        <p>Door het semester heen heb ik mij altijd zo goed mogelijk proberen in te zetten voor mijn opleiding. Ik heb heel hard kunnen werk aan mij hard- & soft skills en ik kan met zekerheid zeggen dat ik er een aantal bij heb. Ookal weet ik dat er nog veel werk aan de winkel is zoals bij mijn Hard skills . ik blijf ook positief naar mijn opleiding kijken en ik ben zeker dat ik deze ook tot een goed einde zal kunnen brengen.</p>
     </article>
 
 </main>
