--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
         <p><strong>Wat zijn verbeterpunten of uitdagingen voor mezelf? En wat kan ik daaraan doen?</strong></p>
         <p>De belangrijkste is toch wel om meer hulp te durven vragen bij dingen waar ik problemen ervaar.  Daarnaast heb ik soms nog moeite bij het opstarten van projecten waardoor ik soms kostbare tijd laat voorbij gaan aangezien ik zelf in handen heb wanneer ik daadwerkelijk begin aan mijn studies/projecten.</p>
         <p><strong>Wat wil ik nog meer bijleren tijdens de volgende periode van WPL?</strong></p>
-        <p>betere tijdsverdeling en beter durven aangeven als ik ergens moeite mee heb.</p>
+        <p>Betere tijdsverdeling en beter durven aangeven als ik ergens moeite mee heb.</p>
     </article>
     <h2>X Factor</h2>
     <img src="images/x-factor_2022.jpg" id="XF">
