--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
                 </div>
             </div></div></td>
             <td class="tableblock halign-left valign-top"><p class="tableblock"></p>
-                <p class="tableblock">Vooral C# is nooit echt bij mij doorgedrongen. Daardoor zijn mijn resultaten slecht en is de kans dat ik door ga naar werkplekleren 2 niet zo groot meer. Het meest frustrerende vond ik wel dat naast dat k zo hard mijn best heb gedaan voor de progrmmeervakken, het niet echt beloond word.</p></td>
+                <p class="tableblock">Vooral C# is nooit echt bij mij doorgedrongen. Daardoor zijn mijn resultaten slecht en is de kans dat ik door ga naar werkplekleren 2 niet zo groot meer. Het meest frustrerende vond ik wel dat naast dat ik zo hard mijn best heb gedaan voor de progrmmeervakken, het niet echt beloond word.</p></td>
         </tr>
         <tr>
             <td class="tableblock halign-left valign-top"><div class="content"><div class="imageblock text-center">
